Fixed style for mobile menu on mobile version.

--- a/site/styles/header_mobile.less
+++ b/site/styles/header_mobile.less
@@ -76,6 +76,8 @@ div.mobile_title h1 {
 
 nav.mobile_menu {
 	right: -100%;
+	top: 56px;
+	height: 100vh;
 	text-align: center;
 	background-color: @color_grey;
 	overflow-y: scroll;
@@ -87,6 +89,8 @@ nav.mobile_menu.visible {
 }
 
 nav.mobile_menu a {
+	display: block;
+
 	padding: 1.2em 1em;
 	font-weight: 700;
 	color: @color_background;
